--- a/assets/css/base/_variables.scss
+++ b/assets/css/base/_variables.scss
@@ -1,2 +1,15 @@
-$primary-font: "Montserrat", sans-serif;
-$secondary-font: "Open Sans", sans-serif;
+// Fonts
+
+$primaryFont: "Montserrat", sans-serif;
+$secondaryFont: "Open Sans", sans-serif;
+
+// Colors
+$primaryColor: #FC7163;
+$secondaryColor: #0086CA;
+$blueColor: #1D44F9;
+$navyColor: #2D3561;
+$yellowColor: #FFE37B;
+$grayColor: #2c3033;
+$offwhiteColor : #F0F6F8;
+$white : #ffffff;
+$black : #000000;
