--- a/assets/css/base/_variables.scss
+++ b/assets/css/base/_variables.scss
@@ -10,6 +10,7 @@ $blueColor: #1D44F9;
 $navyColor: #2D3561;
 $yellowColor: #FFE37B;
 $grayColor: #2c3033;
+$grayColor2: #DBDFEF;
 $offwhiteColor : #F0F6F8;
 $white : #ffffff;
 $black : #000000;
