--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,13 @@
 @import './base/variables';
 @import './base/base';
 @import './layout/header';
-@import './layout/intro';
+@import './layout/intro-section';
+@import './layout/monopoly-section';
+@import './layout/roi-section';
+@import './layout/knowledge-section';
+@import './layout/categories-section';
+@import './layout/videodesc-section';
+@import './layout/brands-section';
+@import './layout/preview-section';
+@import './layout/btc-section';
 
