--- a/assets/css/layout/_intro-section.scss
+++ b/assets/css/layout/_intro-section.scss
@@ -17,6 +17,7 @@
       }
     }
     p {
+      font-family: $primaryFont;
       font-size: 24px;
       font-weight: 700;
       margin: 30px 0px;
@@ -28,23 +29,22 @@
       }
     }
   }
-
-  .intro-video {
+}
+.intro-video {
+  display: inline-block;
+  position: relative;
+  img {
+    border-radius: 20px;
+    max-width: 600px;
+  }
+  .icon {
+    position: absolute;
+    left: 50%;
     display: inline-block;
-    position: relative;
+    top: 50%;
+    transform: translate(-50%, -50%);
     img {
-      border-radius: 20px;
-      max-width: 600px;
-    } 
-    .icon {
-      position: absolute;
-      left: 50%;
-      display: inline-block;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      img {
-        max-width: 100px;
-      }
-    } 
+      max-width: 100px;
+    }
   }
 }
