--- a/assets/css/layout/_brands-section.scss
+++ b/assets/css/layout/_brands-section.scss
@@ -13,11 +13,23 @@
     font-weight: 900;
     color: $grayColor2;
     opacity: 0.1;
+    @include md{
+      font-size: 60px;
+    }
+    @include sm{
+      font-size: 30px;
+    }
   }
   .title {
     font-size: 70px;
     font-weight: 900;
     color: $primaryColor;
+    @include md{
+      font-size: 50px;
+    }
+    @include sm{
+      font-size: 30px;
+    }
   }
   .blue {
     font-family: $primaryFont;
@@ -32,6 +44,8 @@
       min-height: 80px;
       display: flex;
       align-items: center;
+      text-align: center;
+      justify-content: center;
     }
   }
 }
