--- a/assets/css/layout/_btc-section.scss
+++ b/assets/css/layout/_btc-section.scss
@@ -1,6 +1,72 @@
-.btc-section{
+.btc-section {
   background-image: url(../img/bg-blue.svg);
-  background-size: 65%;
-    background-repeat: no-repeat;
-    background-position: right center;
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position: right center;
+  text-align: center;
+  h2 {
+    font-size: 50px;
+    font-weight: 700;
+    color: $white;
+    padding-top: 80px;
+    .yellow{
+      color: $yellowColor;
+      font-weight: 900;
+      font-style: italic;
+    }
+    @include md{
+      font-size: 30px;
+      padding-top: 0px;
+      text-align: center;
+      color: $grayColor;
+    }
+    @include sm{
+      font-size: 24px;
+      padding-top: 0px;
+      text-align: center;
+      color: $grayColor;
+    }
+  }
+  p{
+    padding: 50px;
+    font-size: 20px;
+    color: $navyColor;
+    font-family: $primaryFont;
+    font-weight: 700;
+    text-transform: uppercase;
+    span{
+      color: $white;
+      @include md{
+        color: $primaryColor;
+      }
+      @include sm{
+        color: $primaryColor;
+      }
+    }
+    @include lg{
+      padding: 20px;
+      padding-right: 40px;
+    }
+    
+    @include md{
+      padding: 10px;
+      text-align: center;
+      color: $grayColor;
+    }
+    @include sm{
+      font-size: 16px;
+      padding: 5px;
+      text-align: center;
+      color: $grayColor;
+    }
+  }
+  @include lg{
+    background-size: cover;
+  }
+  @include md{
+    background: transparent;
+  }
+  @include sm{
+    background: transparent;
+  }
 }
