--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,4 +10,5 @@
 @import './layout/brands-section';
 @import './layout/preview-section';
 @import './layout/btc-section';
+@import './layout/black-section';
 
