--- a/assets/css/layout/_monopoly-section.scss
+++ b/assets/css/layout/_monopoly-section.scss
@@ -4,6 +4,9 @@
   background-repeat: no-repeat;
   background-position: left center;
   padding: 40px 0px;
+  @include md{
+    background: transparent;
+  }
 }
 
 .list-block {
@@ -15,6 +18,13 @@
       color: $primaryColor;
       font-size: 45px;
       font-weight: 900;
+      @include sm {
+        font-size: 28px;
+      }
+    }
+    @include sm {
+      font-size: 24px;
+      padding-top: 20px;
     }
   }
   h4 {
@@ -23,6 +33,9 @@
       color: $secondaryColor;
       font-size: 28px;
       font-style: italic;
+      @include sm {
+        font-size: 24px;
+      }
     }
   }
   ul {
@@ -53,6 +66,15 @@
         width: 25px;
         height: 25px;
         background-repeat: no-repeat;
+        @include sm {
+          width: 15px;
+          height: 15px;
+        }
+      }
+
+      @include sm {
+        font-size: 20px;
+        padding-left: 35px;
       }
     }
   }
