--- a/assets/css/layout/_videodesc-section.scss
+++ b/assets/css/layout/_videodesc-section.scss
@@ -1,8 +1,21 @@
 .videodesc-section {
   position: relative;
   padding-bottom: 100px;
+  @include md{
+    text-align: center;
+  }
+  @include sm{
+    text-align: center;
+    padding-bottom: 50px;
+  }
   .intro-video {
     margin-top: -70px;
+    @include md {
+      margin-top: 0px;
+    }
+    @include sm {
+      margin-top: 0px;
+    }
   }
   ul {
     list-style: none;
@@ -15,16 +28,37 @@
       color: $white;
       font-size: 20px;
       padding: 10px 0px;
+      @include md{
+        text-align: center;
+        padding: 5px 0px;
+      }
+      @include sm{
+        text-align: center;
+        padding: 5px 0px;
+        font-size: 16px;
+      }
     }
   }
 
   .left {
     li {
       text-align: right;
+      @include md{
+        text-align: center;
+      }
+      @include sm{
+        text-align: center;
+      }
     }
   }
   .gradient-btn{
     margin-top: 60px;
+    @include md{
+      margin-top: 30px;
+    }
+    @include sm{
+      margin-top: 10px;
+    }
   }
   &:before{
     position: absolute;
@@ -34,5 +68,8 @@
     background-position: center bottom;
     width: 100%;
     height: 100%;
+    background-repeat: no-repeat;
+    left: 0;
+    bottom: 0;
   }
 }
